# mlops_toy_tools

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  infer.py  pyproject.toml  train.py
.dvc/: config
checkpoints/: dense.pt
mlops_toy_tools/: model.py
model_repository/: client.py  export.py  report.md
model_repository/pt-dense/: config.pbtxt
model_repository/pt-dense/1/: model.pt
